--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
     </div>
 </header>
 <main>
-    <!--section1-->
+    <!-------------------------------section1--------------------------------------->
 
-    <section class="main">
+    <section class="main-hero">
         <div class="container">
-            <h1 class="main-headline">
+            <h1 class="main-headline main-headline-desk">
                 Effective Solutions For Your Business
             </h1>
             <button type="button" class="main-button" data-modal-open="">Order Service</button>
         </div>
     </section>
-    <!--section2-->
+    <!---------------------------------section2---------------------------->
     <section class="container-main">
         <div class="container">
             <h2 class="visually-hidden">Advantages</h2>
-            <ul class="advantage-list">
+            <ul class="advantage-list list">
                 <li class="main-item">
                     <div class="div_advantages">
                         <svg class="icon_advantages" width="64" height="64">
@@ -354,9 +354,6 @@
                     </div>
                 </li>
             </ul>
-
-
-
         </div>
     </section>
     <!--section5-->
@@ -366,14 +363,14 @@
             <ul class="customer-list">
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo2"></use>
                         </svg>
                     </a>
@@ -381,28 +378,28 @@
 
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="104" height="56">
+                        <svg class="icon_customer" width="" height="">
                             <use href="./images/icons.svg#icon-logo6"></use>
                         </svg>
                     </a>
@@ -469,6 +466,7 @@
         </div>
     </div>
 </footer>
+<!-------------------------------MODAL------------------------------------------->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
@@ -533,6 +531,8 @@
 
 <script src="./js/mobile-menu.js"></script>
 <script src="./js/modal.js"></script>
+
+
 
 </body>
 
