--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
                 <p class="icon_list_text">Social media</p>
                 <ul class="icon_lists">
                     <li class="icon_li_footer">
-                        <a class="icon_a" href="" target="_blank">
+                        <a class="icon_li" href="" target="_blank">
                             <svg class="icon_social" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
