--- a/index.html
+++ b/index.html
@@ -186,13 +186,16 @@
             <h2 class="section_name">What are we doing</h2>
             <ul class="list">
                 <li class="list-img">
-                    <img src="./images/doing1.jpg" alt="monitor" width="360" />
+                    <img srcset="./images/mobil/img 11х.jpg 1x ./images/mobil/img 12х.jpg 2x " src="./images/doing1.jpg"
+                        alt="monitor" width="360" />
                 </li>
                 <li class="list-img">
-                    <img src="./images/doing2.jpg" alt="mobile" width="360" />
+                    <img srcset="./images/mobil/img 21х.jpg 1x ./images/mobil/img 22х.jpg 2x " src="./images/doing2.jpg"
+                        alt="mobile" width="360" />
                 </li>
                 <li class="list-img">
-                    <img src="./images/doing3.jpg" alt="mobilepc" width="360" />
+                    <img srcset="./images/mobil/img 31х.jpg 1x ./images/mobil/img 32х.jpg 2x " src="./images/doing3.jpg"
+                        alt="mobilepc" width="360" />
                 </li>
             </ul>
         </div>
@@ -204,7 +207,8 @@
 
             <ul class="team-list">
                 <li class="our_team_card">
-                    <img src="./images/our_team1.jpg" alt="product designer" width="264" />
+                    <img srcset="./images/mobil/Mark1x.jpg 1x ./images/mobil/Mark2x.jpg 2x" src="./images/our_team1.jpg"
+                        alt="product designer" width="264" />
                     <div class="our_team_soc">
                         <h3 class="our_team_name">Mark Guerrero</h3>
                         <p class="our_team_profession">Product Designer</p>
@@ -241,7 +245,8 @@
                     </div>
                 </li>
                 <li class="our_team_card">
-                    <img src="./images/our_team2.jpg" alt="frontend developer" width="264" />
+                    <img srcset="./images/mobil/Tom1x.jpg 1x ./images/mobil/Tom2x.jpg 2x" src="./images/our_team2.jpg"
+                        alt="frontend developer" width="264" />
                     <div class="our_team_soc">
                         <h3 class="our_team_name">Tom Ford</h3>
                         <p class="our_team_profession">Frontend Developer</p>
@@ -279,7 +284,8 @@
                     </div>
                 </li>
                 <li class="our_team_card">
-                    <img src="./images/our_team3.jpg" alt="marketing" width="264" />
+                    <img srcset="./images/mobil/Camila1x.jpg 1x ./images/mobil/Camila2x.jpg 2x"
+                        src="./images/our_team3.jpg" alt="marketing" width="264" />
                     <div class="our_team_soc">
                         <h3 class="our_team_name">Camila Garcia</h3>
                         <p class="our_team_profession">Marketing</p>
@@ -317,7 +323,8 @@
                     </div>
                 </li>
                 <li class="our_team_card">
-                    <img src="./images/our_team4.jpg" alt="designer" width="264" />
+                    <img srcset="./images/mobil/Daniel1x.jpg 1x ./images/mobil/Daniel2x.jpg 2x"
+                        src="./images/our_team4.jpg" alt="designer" width="264" />
                     <div class="our_team_soc">
                         <h3 class="our_team_name">Daniel Wilson</h3>
                         <p class="our_team_profession">UI Designer</p>
