--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <section class="main-hero">
         <div class="container">
-            <h1 class="main-headline main-headline-desk">
+            <h1 class="main-headline">
                 Effective Solutions For Your Business
             </h1>
             <button type="button" class="main-button" data-modal-open="">Order Service</button>
@@ -202,7 +202,7 @@
     </section>
     <!--section4-->
     <section class="section-our_team">
-        <div class="container">
+        <div class="container-team">
             <h2 class="section_name-team">Our Team</h2>
 
             <ul class="team-list">
