--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <nav class="mobile-nav">
 
             <ul class="list mobile-menu">
-                <li><a class="mobile-link link current" href="./index.html">Studio</a></li>
+                <li><a class="mobile-current link current" href="./index.html">Studio</a></li>
                 <li>
                     <a class="mobile-link link" href="./portfolio.html">Portfolio</a>
                 </li>
@@ -370,14 +370,14 @@
             <ul class="customer-list">
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo2"></use>
                         </svg>
                     </a>
@@ -385,28 +385,28 @@
 
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="list_img_customers">
                     <a class="list-img-customersa" href="">
-                        <svg class="icon_customer" width="" height="">
+                        <svg class="icon_customer" width="104" height="56">
                             <use href="./images/icons.svg#icon-logo6"></use>
                         </svg>
                     </a>
