--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="mobile-top">
             <address class="mobile-address">
                 <ul class="list mobile-address-list">
-                    <li>
+                    <li class="">
                         <a class="mobile-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                     <li>
@@ -184,7 +184,7 @@
     <section class="section-doing">
         <div class="container">
             <h2 class="section_name">What are we doing</h2>
-            <ul class="list">
+            <ul class="list list-doing">
                 <li class="list-img">
                     <img srcset="./images/mobil/img 11х.jpg 1x ./images/mobil/img 12х.jpg 2x " src="./images/doing1.jpg"
                         alt="monitor" width="360" />
